<resources>
    <string name="app_name">玩Android</string>
    <string name="tab_home">首页</string>
    <string name="tab_project">项目</string>
    <string name="tab_square">广场</string>
    <string name="tab_wechat">公众号</string>
    <string name="tab_mine">我的</string>

    <string name="toast_double_back_exit">再按一次退出程序</string>
    <string name="isTop">置顶</string>
    <string name="isNew">新</string>
    <string name="collect">收藏</string>
    <string name="refresh">刷新</string>
    <string name="openByBrowser">用浏览器打开</string>
    <string name="my_integral">我的积分:</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_share_article">我分享的文章</string>
    <string name="open_web">开源网站</string>
    <string name="system_settings">系统设置</string>
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="password_sure">确认密码</string>
    <string name="user_name">用户名</string>
    <string name="to_register">没有账号？去注册</string>
    <string name="basic_setting">基本设置</string>
    <string name="clearCache">清除缓存</string>
    <string name="logout">退出登录</string>
    <string name="version">版本</string>
    <string name="author">作者</string>
    <string name="source_code">项目源码</string>
    <string name="id_and_rank">id：—　排名：—</string>
    <string name="integral_rank">积分排行</string>
    <string name="integral_rule">积分规则</string>
    <string name="integral_record">积分记录</string>
    <string name="share_article">分享文章</string>
    <string name="title">标题</string>
    <string name="article_title">文章标题</string>
    <string name="link">链接</string>
    <string name="share_user">分享人</string>
    <string name="share">分享</string>
    <string name="article_link">文章链接</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清空</string>
    <string name="search">搜索</string>
    <string name="input_search_key_to_search">输入关键字搜索</string>
    <string name="enter_immediately">立即进入</string>
    <string name="register">注册</string>
    <string name="sure">确认</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_tip">嘿！\n赶紧登录吧！</string>
    <string name="login_tip_small">欢迎回来～我们等你好久了!</string>
    <string name="remember_password">记住密码</string>
    <string name="register_tip">欢迎来到玩安卓博客</string>
    <string name="register_tip_small">下方输入用户名、密码进行注册</string>
    <string name="re_password">确认密码</string>
    <string name="back">返回</string>
</resources>