<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.jpc.playandroidkotlin.ui.login.register.RegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.login.register.RegisterActivity">
        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:title="@string/back"
            android:navigationIcon="@drawable/baseline_arrow_back_24"/>
        <TextView
            android:id="@+id/tv_register_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="130dp"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:text="@string/register_tip"
            android:textSize="@dimen/sp_30"
            android:lineHeight="@dimen/dp_44"
            android:textStyle="bold"
            android:textColor="@color/_343965"/>
        <TextView
            android:id="@+id/tv_register_tip_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_register_tip"
            app:layout_constraintStart_toStartOf="@id/tv_register_tip"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/register_tip_small"
            android:textSize="@dimen/sp_12"
            android:lineHeight="@dimen/dp_18"
            android:textColor="@color/_343965"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_register_tip_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dp_35"
            android:layout_marginEnd="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_50"
            app:endIconDrawable="@drawable/ic_clear"
            app:endIconMode="clear_text"
            app:boxCornerRadiusTopStart="@dimen/dp_8"
            app:boxCornerRadiusTopEnd="@dimen/dp_8"
            app:boxCornerRadiusBottomStart="@dimen/dp_4"
            app:boxCornerRadiusBottomEnd="@dimen/dp_4"
            app:boxBackgroundColor="@color/_ECF2FF">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/user_name"
                android:maxLines="1"
                android:maxLength="50"
                android:textSize="@dimen/sp_16"
                android:text="@={viewModel.userName}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_register_username"
            app:layout_constraintStart_toStartOf="@id/til_register_username"
            app:layout_constraintEnd_toEndOf="@id/til_register_username"
            android:layout_marginStart="@dimen/dp_35"
            android:layout_marginEnd="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_15"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusTopStart="@dimen/dp_8"
            app:boxCornerRadiusTopEnd="@dimen/dp_8"
            app:boxCornerRadiusBottomStart="@dimen/dp_4"
            app:boxCornerRadiusBottomEnd="@dimen/dp_4"
            app:boxBackgroundColor="@color/_ECF2FF">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:maxLength="50"
                android:textSize="@dimen/sp_16"
                android:text="@={viewModel.password}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_re_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_register_password"
            app:layout_constraintStart_toStartOf="@id/til_register_username"
            app:layout_constraintEnd_toEndOf="@id/til_register_username"
            android:layout_marginStart="@dimen/dp_35"
            android:layout_marginEnd="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_15"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusTopStart="@dimen/dp_8"
            app:boxCornerRadiusTopEnd="@dimen/dp_8"
            app:boxCornerRadiusBottomStart="@dimen/dp_4"
            app:boxCornerRadiusBottomEnd="@dimen/dp_4"
            app:boxBackgroundColor="@color/_ECF2FF">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/re_password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:maxLength="50"
                android:textSize="@dimen/sp_16"
                android:text="@={viewModel.rePassword}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            app:layout_constraintTop_toBottomOf="@id/til_re_register_password"
            app:layout_constraintStart_toStartOf="@id/til_register_username"
            app:layout_constraintEnd_toEndOf="@id/til_register_username"
            android:layout_marginStart="@dimen/dp_35"
            android:layout_marginEnd="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_100"
            android:backgroundTint="@color/_585CE5"
            app:cardCornerRadius="@dimen/dp_100">
            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/register"
                android:background="@color/_585CE5"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>