<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.search.SearchActivity">
    <data>
        <variable
            name="viewModel"
            type="com.jpc.playandroidkotlin.ui.search.SearchViewModel" />
        <import type="android.view.View"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.jpc.library_base.widgets.TitleLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="@dimen/dp_60"
            android:layout_marginEnd="@dimen/dp_60"
            android:inputType="text"
            android:text="@={viewModel.searchKeyFlow}"
            android:background="@android:color/transparent"
            android:hint="@string/input_search_key_to_search"
            android:imeOptions="actionSearch"
            android:lines="1"
            android:textColor="@color/_ffffff"
            android:textColorHint="@color/_cccccc"
            app:layout_constraintTop_toTopOf="@id/titleLayout"
            app:layout_constraintBottom_toBottomOf="@id/titleLayout"
            tools:ignore="Autofill"/>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/titleLayout"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_hot_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/hot_search"
                    android:textColor="@color/color_main"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_hot_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_6"
                    android:layout_marginTop="@dimen/dp_12"
                    android:layout_marginEnd="@dimen/dp_6"
                    android:scrollbars="none"
                    app:layout_constraintTop_toBottomOf="@id/tv_hot_search"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                    android:id="@+id/tv_search_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/search_history"
                    android:textColor="@color/color_main"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintStart_toStartOf="@id/tv_hot_search"
                    app:layout_constraintTop_toBottomOf="@id/rv_hot_search" />
                <TextView
                    android:id="@+id/tv_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:onClick="@{v -> viewModel.clearSearchHistoryData()}"
                    android:padding="@dimen/dp_10"
                    android:text="@string/clear"
                    android:textColor="@color/_666666"
                    android:visibility="@{viewModel.searchHistoryData.size == 0 ? View.GONE:View.VISIBLE}"
                    app:layout_constraintTop_toTopOf="@id/tv_search_history"
                    app:layout_constraintBottom_toBottomOf="@id/tv_search_history"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_search_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:scrollbars="none"
                    app:layout_constraintTop_toBottomOf="@id/tv_search_history"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>