<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.mine.MineFragment">

    <data>
        <variable
            name="viewModel"
            type="com.jpc.playandroidkotlin.ui.main.mine.MineViewModel" />
    </data>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_main"
                android:paddingTop="?attr/actionBarSize"
                android:paddingBottom="?attr/actionBarSize">
                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="@dimen/dp_72"
                    android:layout_height="@dimen/dp_72"
                    android:layout_marginStart="@dimen/dp_16"
                    android:src="@drawable/ic_user"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="contentDescription"/>
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:text="@{viewModel.userName}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@id/iv_icon"
                    app:layout_constraintBottom_toTopOf="@id/tv_info"
                    app:layout_constraintStart_toEndOf="@id/iv_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="JPC客栈"/>
                <TextView
                    android:id="@+id/tv_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/id_and_rank"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintBottom_toBottomOf="@id/iv_icon"
                    app:layout_constraintStart_toStartOf="@id/tv_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_name" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dp_16"
                app:cardElevation="0dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10">
                    <TextView
                        android:id="@+id/tv_points"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawablePadding="@dimen/dp_6"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/dp_10"
                        android:paddingEnd="@dimen/dp_10"
                        android:text="@string/integral_rank"
                        android:textColor="@color/_333333"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_arrow_right"
                        app:drawableStartCompat="@drawable/ic_points"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <TextView
                        android:id="@+id/tv_pointsNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_40"
                        android:text="—"
                        android:textColor="@color/color_main"
                        android:textSize="@dimen/sp_15"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="@id/tv_points"
                        app:layout_constraintBottom_toBottomOf="@id/tv_points"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="HardcodedText"
                        tools:text="10000000" />
                    <TextView
                        android:id="@+id/tv_currentPoints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_6"
                        android:text="@string/my_integral"
                        android:textColor="@color/_999999"
                        android:textSize="@dimen/sp_13"
                        app:layout_constraintTop_toTopOf="@id/tv_points"
                        app:layout_constraintBottom_toBottomOf="@id/tv_points"
                        app:layout_constraintEnd_toStartOf="@id/tv_pointsNum"/>
                    <TextView
                        android:id="@+id/tv_collect"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawablePadding="@dimen/dp_6"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/dp_10"
                        android:paddingEnd="@dimen/dp_10"
                        android:text="@string/my_collect"
                        android:textColor="@color/_333333"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_arrow_right"
                        app:drawableStartCompat="@drawable/ic_collect"
                        app:layout_constraintTop_toBottomOf="@id/tv_points" />
                    <TextView
                        android:id="@+id/tv_article"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawablePadding="@dimen/dp_6"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/dp_10"
                        android:paddingEnd="@dimen/dp_10"
                        android:text="@string/my_share_article"
                        android:textColor="@color/_333333"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_arrow_right"
                        app:drawableStartCompat="@drawable/ic_article"
                        app:drawableSize="24dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_collect" />
                    <View
                        android:id="@+id/view_line"
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="@color/_f5f5f5"
                        app:layout_constraintTop_toBottomOf="@id/tv_article" />
                    <TextView
                        android:id="@+id/tv_web"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawablePadding="@dimen/dp_6"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/dp_10"
                        android:paddingEnd="@dimen/dp_10"
                        android:text="@string/open_web"
                        android:textColor="@color/_333333"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_arrow_right"
                        app:drawableStartCompat="@drawable/ic_web"
                        app:layout_constraintTop_toBottomOf="@id/view_line" />

                    <TextView
                        android:id="@+id/tv_settings"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_60"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawablePadding="@dimen/dp_6"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/dp_10"
                        android:paddingEnd="@dimen/dp_10"
                        android:text="@string/system_settings"
                        android:textColor="@color/_333333"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_arrow_right"
                        app:drawableStartCompat="@drawable/ic_settings"
                        app:layout_constraintTop_toBottomOf="@id/tv_web" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>